# course-feedbig-system-

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20240623_create_tables.sql
src/backend/: database.rs  models.rs
src/frontend/: app.py
