[package]
name = "course-feedback-system"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
# Authentication
argon2 = "0.5"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10" 